--- a/index.html
+++ b/index.html
@@ -8,4 +8,23 @@
     <!-- using pico.css framework so we dont have to write tons of css ourselves -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 2rem;
+            text-align: center;
+            margin-bottom: 0;        
+      }
+
+        header h1 {
+            margin-bottom: 0.5rem;
+        }
+              
+    </style>
+
   </head>
