body starts with main header and buttons for elements such as dashboard , species , projects etc.

--- a/index.html
+++ b/index.html
@@ -250,3 +250,26 @@
     </style>
 
   </head>
+
+  <body>
+    <!-- header section -->
+    <header>
+        <h1>🌿 Invasive Species Tracker</h1>
+        <p>Newfoundland & Labrador - Invasive Species Management</p>
+    </header>
+
+    <main class="container">
+        <!-- tab buttons -->
+        <nav class="tabs">
+            <button class="tab-btn active" data-tab="dashboard">Dashboard</button>
+            <button class="tab-btn" data-tab="species">Species</button>
+            <button class="tab-btn" data-tab="sightings">Sightings</button>
+            <button class="tab-btn" data-tab="projects">Projects</button>
+            <button class="tab-btn" data-tab="queries">Queries</button>
+            <button class="tab-btn" data-tab="add-sighting">Report Sighting</button>
+        </nav>
+
+        <!-- alert box for success/error messages -->
+        <div id="alert" class="alert"></div>
+
+  </body>
