dashboard tab section

--- a/index.html
+++ b/index.html
@@ -272,4 +272,15 @@
         <!-- alert box for success/error messages -->
         <div id="alert" class="alert"></div>
 
+        <!-- DASHBOARD TAB -->
+        <div id="dashboard" class="tab-content active">
+            <h2>Dashboard Overview</h2>
+            <p>Quick stats about invasive species in NL</p>
+            <div class="stats-grid" id="stats-container">
+                <div class="loading"><div class="spinner"></div></div>
+            </div>
+            <h3>Recent Sightings</h3>
+            <div id="recent-sightings"></div>
+        </div>
+
   </body>
