--- a/index.html
+++ b/index.html
@@ -282,5 +282,12 @@
             <h3>Recent Sightings</h3>
             <div id="recent-sightings"></div>
         </div>
+         
+        <!-- SPECIES TAB -->
+        <div id="species" class="tab-content">
+            <h2>Invasive Species List</h2>
+            <p>All tracked invasive species in the database</p>
+            <div id="species-container"></div>
+        </div>
 
   </body>
