--- a/index.html
+++ b/index.html
@@ -290,4 +290,12 @@
             <div id="species-container"></div>
         </div>
 
+        <!-- SIGHTINGS TAB -->
+        <div id="sightings" class="tab-content">
+            <h2>Sighting Records</h2>
+            <p>All recorded sightings across regions</p>
+            <div id="sightings-container"></div>
+        </div>
+
+
   </body>
