--- a/index.html
+++ b/index.html
@@ -297,5 +297,13 @@
             <div id="sightings-container"></div>
         </div>
 
+        <!-- PROJECTS TAB -->
+        <div id="projects" class="tab-content">
+            <h2>Eradication Projects</h2>
+            <p>Active and completed control projects</p>
+            <div id="projects-container"></div>
+        </div>
+
+
 
   </body>
