load dashboard for first run

--- a/index.html
+++ b/index.html
@@ -776,7 +776,8 @@
     html += '</tbody></table>';
     resultsDiv.innerHTML = html;
 }
-
-
-
-  </body>
+        // load dashboard when page first loads
+        loadDashboard();
+    </script>
+</body>
+</html>
